general: add /api/last route

--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2021"
 
 [dependencies]
 allocative = "0.3.3"
-bincode = { git = "https://github.com/bincode-org/bincode.git" }
+bincode = { git = "https://github.com/bincode-org/bincode.git", features = [
+    "serde",
+] }
 biter = "0.1.0"
 bitcoin_hashes = { version = "0.14.0" }
 chrono = { version = "0.4.38", features = ["serde"] }
