server: add support for .json .csv and ?all=true

--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -6,5 +6,6 @@
     "module": "ESNext",
     "outDir": "/tmp/kibo"
   },
+  // "include": ["scripts"],
   "exclude": ["assets", "packages", "ignore"]
 }
