--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -26,5 +26,6 @@ reqwest = { version = "0.12.8", features = ["blocking", "json"] }
 sanakirja = "1.4.2"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
+sysinfo = "0.32.0"
 toml = "0.8.19"
 zstd = "0.13.2"
