--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -19,13 +19,14 @@ ctrlc = { version = "3.4.5", features = ["termination"] }
 derive_deref = "1.1.1"
 inferno = "0.11.21"
 itertools = "0.13.0"
-memory-stats = "1.2.0"
 ordered-float = "4.3.0"
 rayon = "1.10.0"
 reqwest = { version = "0.12.8", features = ["blocking", "json"] }
 sanakirja = "1.4.2"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
-sysinfo = "0.32.0"
+struct_iterable = { path = "../iterable" }
 toml = "0.8.19"
 zstd = "0.13.2"
+# memory-stats = "1.2.0"
+# sysinfo = "0.32.0"
