--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ bincode = { git = "https://github.com/bincode-org/bincode.git", features = [
     "serde",
 ] }
 bitcoin_hashes = { version = "0.15.0" }
-biter = { path = "./crates/biter" }
+biter = { path = "./src/crates/biter" }
 chrono = { version = "0.4.39", features = ["serde"] }
 clap = { version = "4.5.23", features = ["derive"] }
 color-eyre = "0.6.3"
@@ -27,10 +27,10 @@ rayon = "1.10.0"
 regex = "1.11.1"
 reqwest = { version = "0.12.9", features = ["blocking", "json"] }
 rlimit = "0.10.2"
-snkrj = { path = "./crates/snkrj" }
+snkrj = { path = "./src/crates/snkrj" }
 serde = { version = "1.0.216", features = ["derive"] }
 serde_json = "1.0.133"
-struct_iterable = { path = "./crates/iterable" }
+struct_iterable = { path = "./src/crates/iterable" }
 swc = "9.0.0"
 swc_common = "5.0.0"
 tokio = { version = "1.42.0", features = ["full"] }
