--- a/src/crates/bindex/Cargo.toml
+++ b/src/crates/bindex/Cargo.toml
@@ -9,7 +9,8 @@ biter = "0.2.2"
 color-eyre = "0.6.3"
 ctrlc = "3.4.5"
 derive_deref = "1.1.1"
+heed3 = "0.21.0"
 memmap2 = "0.9.5"
 rayon = "1.10.0"
 snkrj = { path = "../snkrj" }
-canopydb = { git = "https://github.com/arthurprs/canopydb" }
+storable_vec = { path = "../storable_vec" }
