--- a/bindex/Cargo.toml
+++ b/bindex/Cargo.toml
@@ -5,10 +5,10 @@ edition = "2021"
 
 [dependencies]
 bitcoin_hashes = "0.16.0"
-biter = "0.2.2"
+biter = { path = "../biter" }
 color-eyre = "0.6.3"
-ctrlc = "3.4.5"
 derive_deref = "1.1.1"
+exit = { path = "../exit" }
 jiff = "0.1.24"
 rayon = "1.10.0"
 snkrj = { path = "../snkrj" }
