--- a/bindex/Cargo.toml
+++ b/bindex/Cargo.toml
@@ -10,6 +10,7 @@ color-eyre = "0.6.3"
 derive_deref = "1.1.1"
 exit = { path = "../exit" }
 jiff = "0.1.24"
+rapidhash = "1.3.0"
 rayon = "1.10.0"
 snkrj = { path = "../snkrj" }
 storable_vec = { path = "../storable_vec" }
