--- a/iterator/Cargo.toml
+++ b/iterator/Cargo.toml
@@ -9,11 +9,11 @@ categories = ["cryptography::cryptocurrencies", "encoding"]
 edition = "2021"
 
 [dependencies]
-bitcoin = { version = "0.32.5", features = ["serde"] }
-rayon = "1.10.0"
+bitcoin = { workspace = true }
+rayon = { workspace = true }
 crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
 serde = { version = "1.0.217", features = ["derive"] }
-serde_json = "1.0.135"
-derived-deref = "2.1.0"
+serde_json = "1.0.137"
+derive_deref = { workspace = true }
 bitcoincore-rpc = "0.19.0"
 # tokio = { version = "1.39.2", features = ["rt-multi-thread"] }
