--- a/computer/Cargo.toml
+++ b/computer/Cargo.toml
@@ -4,10 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-biter = { workspace = true }
 bindex = { workspace = true }
+biter = { workspace = true }
 color-eyre = { workspace = true }
 derive_deref = { workspace = true }
 exit = { workspace = true }
+fjall = { workspace = true }
 jiff = { workspace = true }
 rayon = { workspace = true }
+storable_vec = { workspace = true }
+unsafe_slice_serde = { workspace = true }
