--- a/indexer/Cargo.toml
+++ b/indexer/Cargo.toml
@@ -10,7 +10,7 @@ biter = { workspace = true }
 color-eyre = { workspace = true }
 derive_deref = { workspace = true }
 exit = { workspace = true }
-fjall = "2.5.0"
+fjall = { workspace = true }
 jiff = { workspace = true }
 rapidhash = "1.3.0"
 rayon = { workspace = true }
