storable_vec: add modes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ rayon = "1.10.0"
 storable_vec = { path = "storable_vec" }
 struct_iterable = { path = "struct_iterable" }
 unsafe_slice_serde = { path = "unsafe_slice_serde" }
+zerocopy = "0.8.15"
