--- a/computer/Cargo.toml
+++ b/computer/Cargo.toml
@@ -4,12 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bindex = { workspace = true }
-biter = { workspace = true }
+iterator = { workspace = true }
 color-eyre = { workspace = true }
 derive_deref = { workspace = true }
 exit = { workspace = true }
 fjall = { workspace = true }
+indexer = { workspace = true }
 jiff = { workspace = true }
 storable_vec = { workspace = true }
 zerocopy = { workspace = true }
