--- a/indexer/Cargo.toml
+++ b/indexer/Cargo.toml
@@ -5,11 +5,11 @@ edition = "2021"
 
 [dependencies]
 bitcoin = { workspace = true }
-biter = { workspace = true }
 color-eyre = { workspace = true }
 derive_deref = { workspace = true }
 exit = { workspace = true }
 fjall = { workspace = true }
+iterator = { workspace = true }
 jiff = { workspace = true }
 rapidhash = "1.3.0"
 rayon = { workspace = true }
