--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 # allocative = "0.3.4"
-axum = "0.7.9"
+axum = "0.8.1"
 # bincode = { git = "https://github.com/bincode-org/bincode.git", features = [
 #     "serde",
 # ] }
@@ -13,7 +13,7 @@ axum = "0.7.9"
 # biter = { path = "./src/crates/biter" }
 # chrono = { version = "0.4.39", features = ["serde"] }
 # clap = { version = "4.5.26", features = ["derive"] }
-# color-eyre = "0.6.3"
+color-eyre = { workspace = true }
 # ctrlc = { version = "3.4.5", features = ["termination"] }
 # derive_deref = "1.1.1"
 # env_logger = "0.11.6"
@@ -22,16 +22,16 @@ axum = "0.7.9"
 # log = { version = "0.4.25", features = ["std", "serde"] }
 # ordered-float = "4.6.0"
 # rayon = "1.10.0"
-# regex = "1.11.1"
-# reqwest = { version = "0.12.12", features = ["blocking", "json"] }
+regex = "1.11.1"
+reqwest = { version = "0.12.12", features = ["blocking", "json"] }
 # rlimit = "0.10.2"
 # snkrj = { path = "./src/crates/snkrj" }
 # serde = { version = "1.0.217", features = ["derive"] }
 # serde_json = "1.0.135"
 # struct_iterable = { path = "./src/crates/iterable" }
-# swc = "9.0.2"
-# swc_common = "5.0.0"
-# tokio = { version = "1.43.0", features = ["full"] }
+swc = "13.0.1"
+swc_common = "6.0.0"
+tokio = { version = "1.43.0", features = ["full"] }
 # toml = "0.8.19"
-# tower-http = { version = "0.6.2", features = ["compression-full"] }
-# zstd = "0.13.2"
+tower-http = { version = "0.6.2", features = ["compression-full"] }
+zstd = "0.13.2"
