--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,37 +1,34 @@
 [package]
-name = "kibo_server"
+name = "berver"
 version = "0.6.0"
 edition = "2021"
 
 [dependencies]
-# allocative = "0.3.4"
-axum = "0.8.1"
-# bincode = { git = "https://github.com/bincode-org/bincode.git", features = [
-#     "serde",
-# ] }
 # bitcoin_hashes = { version = "0.15.0" }
 # biter = { path = "./src/crates/biter" }
 # chrono = { version = "0.4.39", features = ["serde"] }
 # clap = { version = "4.5.26", features = ["derive"] }
-color-eyre = { workspace = true }
 # ctrlc = { version = "3.4.5", features = ["termination"] }
-# derive_deref = "1.1.1"
-# env_logger = "0.11.6"
 # inferno = "0.12.1"
 # itertools = "0.13.0"
-# log = { version = "0.4.25", features = ["std", "serde"] }
 # ordered-float = "4.6.0"
 # rayon = "1.10.0"
+# rlimit = "0.10.2"
+# serde_json = "1.0.135"
+axum = "0.8.1"
+color-eyre = { workspace = true }
+computer = { workspace = true }
+derive_deref = { workspace = true }
+indexer = { workspace = true }
+jiff = { workspace = true }
+logger = { workspace = true }
+oxc = { version = "0.49.0", features = ["codegen", "minifier"] }
 regex = "1.11.1"
 reqwest = { version = "0.12.12", features = ["blocking", "json"] }
-# rlimit = "0.10.2"
-# snkrj = { path = "./src/crates/snkrj" }
-# serde = { version = "1.0.217", features = ["derive"] }
-# serde_json = "1.0.135"
-# struct_iterable = { path = "./src/crates/iterable" }
-swc = "13.0.1"
-swc_common = "6.0.0"
+serde = { workspace = true }
+serde_json = "1.0.138"
+storable_vec = { workspace = true }
+struct_iterable = { workspace = true }
 tokio = { version = "1.43.0", features = ["full"] }
-# toml = "0.8.19"
 tower-http = { version = "0.6.2", features = ["compression-full"] }
 zstd = "0.13.2"
