--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -26,7 +26,7 @@ oxc = { version = "0.49.0", features = ["codegen", "minifier"] }
 regex = "1.11.1"
 reqwest = { version = "0.12.12", features = ["blocking", "json"] }
 serde = { workspace = true }
-serde_json = "1.0.138"
+serde_json = { version = "1.0.138", features = ["float_roundtrip"] }
 storable_vec = { workspace = true }
 struct_iterable = { workspace = true }
 tokio = { version = "1.43.0", features = ["full"] }
