--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ logger = { path = "logger" }
 rayon = "1.10.0"
 rlimit = { version = "0.10.2" }
 serde = { version = "1.0.217", features = ["derive"] }
+serde_json = { version = "1.0.138", features = ["float_roundtrip"] }
 server = { path = "server", package = "berver" }
-storable_vec = { path = "storable_vec" }
+storable_vec = { path = "storable_vec", features = ["json"] }
 zerocopy = { version = "0.8.17", features = ["derive"] }
