--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -4,17 +4,6 @@ version = "0.6.0"
 edition = "2021"
 
 [dependencies]
-# bitcoin_hashes = { version = "0.15.0" }
-# biter = { path = "./src/crates/biter" }
-# chrono = { version = "0.4.39", features = ["serde"] }
-# clap = { version = "4.5.26", features = ["derive"] }
-# ctrlc = { version = "3.4.5", features = ["termination"] }
-# inferno = "0.12.1"
-# itertools = "0.13.0"
-# ordered-float = "4.6.0"
-# rayon = "1.10.0"
-# rlimit = "0.10.2"
-# serde_json = "1.0.135"
 axum = "0.8.1"
 color-eyre = { workspace = true }
 computer = { workspace = true }
@@ -26,7 +15,7 @@ oxc = { version = "0.49.0", features = ["codegen", "minifier"] }
 regex = "1.11.1"
 reqwest = { version = "0.12.12", features = ["blocking", "json"] }
 serde = { workspace = true }
-serde_json = { version = "1.0.138", features = ["float_roundtrip"] }
+serde_json = { workspace = true }
 storable_vec = { workspace = true }
 tokio = { version = "1.43.0", features = ["full"] }
 tower-http = { version = "0.6.2", features = ["compression-full"] }
