--- a/pricer/Cargo.toml
+++ b/pricer/Cargo.toml
@@ -4,3 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+color-eyre = { workspace = true }
+derive_deref = { workspace = true }
+indexer = { workspace = true }
+logger = { workspace = true }
+reqwest = { version = "0.12.12", features = ["blocking", "brotli", "deflate", "gzip", "json", "zstd"] }
+jiff = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+zerocopy = { workspace = true }
