--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,10 +20,10 @@ exit = { path = "exit" }
 fjall = "2.6.3"
 indexer = { path = "indexer", package = "bindex" }
 iterator = { path = "iterator", package = "biter" }
-jiff = "0.2.0"
+jiff = "0.2.1"
 logger = { path = "logger" }
 rayon = "1.10.0"
-pricer = { path = "pricer" }
+pricer = { path = "pricer", package = "brice" }
 rlimit = { version = "0.10.2" }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = { version = "1.0.138", features = ["float_roundtrip"] }
