--- a/pricer/Cargo.toml
+++ b/pricer/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
-name = "pricer"
+name = "brice"
+description = "A bitcoin price fetcher"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,16 +8,9 @@ edition = "2021"
 color-eyre = { workspace = true }
 derive_deref = { workspace = true }
 indexer = { workspace = true }
-logger = { workspace = true }
-reqwest = { version = "0.12.12", features = [
-    "blocking",
-    "brotli",
-    "deflate",
-    "gzip",
-    "json",
-    "zstd",
-] }
 jiff = { workspace = true }
+logger = { workspace = true }
+minreq = { version = "2.13.2", features = ["https", "serde_json"] }
 serde = { workspace = true }
 serde_json = { workspace = true }
 storable_vec = { workspace = true }
