indexer: update readme

--- a/computer/Cargo.toml
+++ b/computer/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "bomputer"
+description = "A Bitcoin dataset computer built on top of brice"
 version = "0.1.0"
 edition = "2021"
 
