--- a/indexer/Cargo.toml
+++ b/indexer/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bindex"
-description = "A bitcoin-core indexer"
+description = "A bitcoin-core indexer built on top of biter"
 version = "0.1.0"
 edition = "2021"
 
@@ -15,7 +15,7 @@ jiff = { workspace = true }
 logger = { workspace = true }
 rapidhash = "1.3.0"
 rayon = { workspace = true }
-rlimit = { workspace = true }
+rlimit = { version = "0.10.2" }
 serde = { workspace = true }
 serde_bytes = "0.11.15"
 storable_vec = { workspace = true }
