--- a/iterator/Cargo.toml
+++ b/iterator/Cargo.toml
@@ -9,16 +9,15 @@ edition = { workspace = true }
 license = { workspace = true }
 
 [features]
-fjall = ["dep:fjall"]
-zerocopy = ["dep:zerocopy"]
+bytes = ["dep:fjall", "dep:zerocopy"]
 
 [dependencies]
 bitcoin = { workspace = true }
-rayon = { workspace = true }
+bitcoincore-rpc = "0.19.0"
 crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
+derive_deref = { workspace = true }
 fjall = { workspace = true, optional = true }
+rayon = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
-derive_deref = { workspace = true }
-bitcoincore-rpc = "0.19.0"
 zerocopy = { workspace = true, optional = true }
