--- a/crates/brk_computer/Cargo.toml
+++ b/crates/brk_computer/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "brk_computer"
 description = "A Bitcoin dataset computer built on top of brk_indexer and brk_fetcher"
-version = "0.1.0"
+version = { workspace = true }
 edition = { workspace = true }
 license = { workspace = true }
 
