--- a/crates/brk_fetcher/Cargo.toml
+++ b/crates/brk_fetcher/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "brk_fetcher"
 description = "A bitcoin price fetcher built on top of brk_indexer"
-version = "0.1.0"
+version = { workspace = true }
 edition = { workspace = true }
 license = { workspace = true }
 
 [dependencies]
 brk_indexer = { workspace = true }
-brk_printer = { workspace = true }
+brk_logger = { workspace = true }
 color-eyre = { workspace = true }
 derive_deref = { workspace = true }
 jiff = { workspace = true }
