--- a/crates/brk_indexer/Cargo.toml
+++ b/crates/brk_indexer/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "brk_indexer"
 description = "A bitcoin-core indexer built on top of brk_parser"
-version = "0.1.0"
+version = { workspace = true }
 edition = { workspace = true }
 license = { workspace = true }
 
 [dependencies]
 bitcoin = { workspace = true }
 brk_parser = { workspace = true }
-brk_printer = { workspace = true }
+brk_logger = { workspace = true }
 color-eyre = { workspace = true }
 derive_deref = { workspace = true }
 fjall = { workspace = true }
