--- a/crates/brk_parser/Cargo.toml
+++ b/crates/brk_parser/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "brk_parser"
 description = "A very fast Bitcoin block iterator built on top of bitcoin-rust"
-version = "0.2.3"
 repository = "https://github.com/kibo-money/kibo/tree/main/src/crates/biter"
 keywords = ["bitcoin", "block", "iterator"]
 categories = ["cryptography::cryptocurrencies", "encoding"]
+version = { workspace = true }
 edition = { workspace = true }
 license = { workspace = true }
 
