--- a/crates/brk_server/Cargo.toml
+++ b/crates/brk_server/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "brk_server"
 description = "A Bitcoin data server built on top of bindexer, bricer and bomputer"
-version = "0.1.0"
+version = { workspace = true }
 edition = { workspace = true }
 license = { workspace = true }
 
@@ -9,7 +9,7 @@ license = { workspace = true }
 axum = "0.8.1"
 brk_computer = { workspace = true }
 brk_indexer = { workspace = true }
-brk_printer = { workspace = true }
+brk_logger = { workspace = true }
 color-eyre = { workspace = true }
 derive_deref = { workspace = true }
 jiff = { workspace = true }
