--- a/crates/brk_indexer/Cargo.toml
+++ b/crates/brk_indexer/Cargo.toml
@@ -9,6 +9,7 @@ license = { workspace = true }
 bitcoin = { workspace = true }
 brk_parser = { workspace = true }
 brk_logger = { workspace = true }
+byteview = { workspace = true }
 color-eyre = { workspace = true }
 derive_deref = { workspace = true }
 fjall = { workspace = true }
