--- a/crates/brk_parser/Cargo.toml
+++ b/crates/brk_parser/Cargo.toml
@@ -8,16 +8,13 @@ version = { workspace = true }
 edition = { workspace = true }
 license = { workspace = true }
 
-[features]
-bytes = ["dep:fjall", "dep:zerocopy"]
-
 [dependencies]
 bitcoin = { workspace = true }
 bitcoincore-rpc = "0.19.0"
+byteview = { workspace = true }
 crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
 derive_deref = { workspace = true }
-fjall = { workspace = true, optional = true }
 rayon = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
-zerocopy = { workspace = true, optional = true }
+zerocopy = { workspace = true }
