--- a/crates/brk_parser/Cargo.toml
+++ b/crates/brk_parser/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "brk_parser"
-description = "A very fast Bitcoin block iterator built on top of bitcoin-rust"
+description = "A very fast Bitcoin Core block parser and iterator built on top of bitcoin-rust"
 repository = "https://github.com/kibo-money/kibo/tree/main/src/crates/biter"
 keywords = ["bitcoin", "block", "iterator"]
 categories = ["cryptography::cryptocurrencies", "encoding"]
