--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ package.version = "0.0.0"
 
 [workspace.dependencies]
 bitcoin = { version = "0.32.5", features = ["serde"] }
+bitcoincore-rpc = "0.19.0"
 brk_computer = { version = "0", path = "crates/brk_computer" }
+brk_core = { version = "0", path = "crates/brk_core" }
 brk_fetcher = { version = "0", path = "crates/brk_fetcher" }
 brk_indexer = { version = "0", path = "crates/brk_indexer" }
 brk_parser = { version = "0", path = "crates/brk_parser" }
@@ -23,7 +25,6 @@ log = { version = "0.4.26" }
 minreq = { version = "2.13.2", features = ["https", "serde_json"] }
 rayon = "1.10.0"
 serde = { version = "1.0.218", features = ["derive"] }
-serde_bytes = "0.11.15"
 serde_json = { version = "1.0.139", features = ["float_roundtrip"] }
 storable_vec = { version = "0", path = "crates/storable_vec", features = [
     "json",
