--- a/crates/brk_computer/Cargo.toml
+++ b/crates/brk_computer/Cargo.toml
@@ -1,18 +1,14 @@
 [package]
 name = "brk_computer"
-description = "A Bitcoin dataset computer built on top of brk_indexer and brk_fetcher"
+description = "A Bitcoin dataset computer, built on top of brk_indexer"
 version = { workspace = true }
 edition = { workspace = true }
 license = { workspace = true }
 
 [dependencies]
-brk_fetcher = { workspace = true }
+brk_core = { workspace = true }
 brk_indexer = { workspace = true }
 brk_parser = { workspace = true }
-byteview = { workspace = true }
 color-eyre = { workspace = true }
-derive_deref = { workspace = true }
-fjall = { workspace = true }
 hodor = { workspace = true }
 storable_vec = { workspace = true }
-zerocopy = { workspace = true }
