--- a/crates/brk_fetcher/Cargo.toml
+++ b/crates/brk_fetcher/Cargo.toml
@@ -6,14 +6,12 @@ edition = { workspace = true }
 license = { workspace = true }
 
 [dependencies]
+brk_core = { workspace = true }
 brk_indexer = { workspace = true }
 brk_logger = { workspace = true }
 color-eyre = { workspace = true }
-derive_deref = { workspace = true }
 jiff = { workspace = true }
 log = { workspace = true }
 minreq = { workspace = true }
-serde = { workspace = true }
 serde_json = { workspace = true }
 storable_vec = { workspace = true }
-zerocopy = { workspace = true }
