--- a/crates/brk/Cargo.toml
+++ b/crates/brk/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "brk"
-description = "The Bitcoin Research Kit is a suite of tools designed to help you extract, explore and analyze the data stored from your node"
+description.workspace = true
 license.workspace = true
+readme.workspace = true
+repository.workspace = true
 edition.workspace = true
 version.workspace = true
 
