--- a/crates/brk_computer/Cargo.toml
+++ b/crates/brk_computer/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "brk_computer"
 description = "A Bitcoin dataset computer, built on top of brk_indexer"
-version = { workspace = true }
-edition = { workspace = true }
-license = { workspace = true }
+version.workspace = true
+edition.workspace = true
+license.workspace = true
+repository.workspace = true
 
 [dependencies]
 brk_core = { workspace = true }
