--- a/crates/brk_logger/Cargo.toml
+++ b/crates/brk_logger/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "brk_logger"
 description = "A clean logger used in the Bitcoin Research Kit"
-version = { workspace = true }
-edition = { workspace = true }
-license = { workspace = true }
+version.workspace = true
+edition.workspace = true
+license.workspace = true
+repository.workspace = true
 
 [dependencies]
 color-eyre = { workspace = true }
