--- a/crates/storable_vec/Cargo.toml
+++ b/crates/storable_vec/Cargo.toml
@@ -4,8 +4,9 @@ description = "A very small, fast, efficient and simple storable Vec"
 version = "0.1.3"
 keywords = ["vec", "disk", "data"]
 categories = ["database"]
-edition = { workspace = true }
-license = { workspace = true }
+edition.workspace = true
+license.workspace = true
+repository.workspace = true
 
 [features]
 json = ["serde", "serde_json"]
