--- a/crates/brk_fetcher/Cargo.toml
+++ b/crates/brk_fetcher/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "brk_fetcher"
-description = "A Bitcoin price fetcher built on top of brk_indexer"
+description = "A Bitcoin price fetcher"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
@@ -8,7 +8,6 @@ repository.workspace = true
 
 [dependencies]
 brk_core = { workspace = true }
-brk_indexer = { workspace = true }
 brk_logger = { workspace = true }
 color-eyre = { workspace = true }
 jiff = { workspace = true }
