--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = ["crates/*"]
 package.description = "The Bitcoin Research Kit is a suite of tools designed to extract, compute and display data stored on a Bitcoin Core node"
 package.license = "MIT"
 package.edition = "2024"
-package.version = "0.0.1"
+package.version = "0.0.2"
 package.repository = "https://github.com/bitcoinresearchkit/brk"
 
 [workspace.dependencies]
@@ -12,23 +12,21 @@ bitcoin = { version = "0.32.5", features = ["serde"] }
 bitcoincore-rpc = "0.19.0"
 brk_computer = { version = "0", path = "crates/brk_computer" }
 brk_core = { version = "0", path = "crates/brk_core" }
+brk_exit = { version = "0", path = "crates/brk_exit" }
 brk_fetcher = { version = "0", path = "crates/brk_fetcher" }
 brk_indexer = { version = "0", path = "crates/brk_indexer" }
-brk_parser = { version = "0", path = "crates/brk_parser" }
 brk_logger = { version = "0", path = "crates/brk_logger" }
+brk_parser = { version = "0", path = "crates/brk_parser" }
 brk_server = { version = "0", path = "crates/brk_server" }
+brk_vec = { version = "0", path = "crates/brk_vec", features = ["json"] }
 byteview = "0.5.4"
 color-eyre = "0.6.3"
 derive_deref = "1.1.1"
 fjall = "2.6.7"
-hodor = { version = "0", path = "crates/hodor" }
 jiff = "0.2.1"
 log = { version = "0.4.26" }
 minreq = { version = "2.13.2", features = ["https", "serde_json"] }
 rayon = "1.10.0"
 serde = { version = "1.0.218", features = ["derive"] }
 serde_json = { version = "1.0.139", features = ["float_roundtrip"] }
-storable_vec = { version = "0", path = "crates/storable_vec", features = [
-    "json",
-] }
 zerocopy = { version = "0.8.20", features = ["derive"] }
