--- a/crates/brk_exit/Cargo.toml
+++ b/crates/brk_exit/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "hodor"
-description = "Hold the door, an exit blocker built on top of ctrlc"
-version = "0.1.1"
+name = "brk_exit"
+description = "An exit blocker built on top of ctrlc"
+version.workspace = true
 edition.workspace = true
 license.workspace = true
 repository.workspace = true
