--- a/crates/brk_indexer/Cargo.toml
+++ b/crates/brk_indexer/Cargo.toml
@@ -10,14 +10,13 @@ repository.workspace = true
 bitcoin = { workspace = true }
 bitcoincore-rpc = { workspace = true }
 brk_core = { workspace = true }
+brk_exit = { workspace = true }
 brk_parser = { workspace = true }
 brk_logger = { workspace = true }
+brk_vec = { workspace = true }
 byteview = { workspace = true }
 color-eyre = { workspace = true }
 fjall = { workspace = true }
-hodor = { workspace = true }
 log = { workspace = true }
 rayon = { workspace = true }
-rlimit = { version = "0.10.2" }
-storable_vec = { workspace = true }
 zerocopy = { workspace = true }
