--- a/crates/brk_server/Cargo.toml
+++ b/crates/brk_server/Cargo.toml
@@ -11,6 +11,7 @@ axum = "0.8.1"
 brk_computer = { workspace = true }
 brk_indexer = { workspace = true }
 brk_logger = { workspace = true }
+brk_vec = { workspace = true }
 color-eyre = { workspace = true }
 derive_deref = { workspace = true }
 jiff = { workspace = true }
@@ -18,6 +19,5 @@ log = { workspace = true }
 oxc = { version = "0.53.0", features = ["codegen", "minifier"] }
 serde = { workspace = true }
 serde_json = { workspace = true }
-storable_vec = { workspace = true }
 tokio = { version = "1.43.0", features = ["full"] }
 tower-http = { version = "0.6.2", features = ["compression-full"] }
