--- a/crates/brk_vec/Cargo.toml
+++ b/crates/brk_vec/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "storable_vec"
+name = "brk_vec"
 description = "A very small, fast, efficient and simple storable Vec"
-version = "0.1.3"
 keywords = ["vec", "disk", "data"]
 categories = ["database"]
+version.workspace = true
 edition.workspace = true
 license.workspace = true
 repository.workspace = true
