--- a/crates/brk_computer/Cargo.toml
+++ b/crates/brk_computer/Cargo.toml
@@ -9,7 +9,10 @@ repository.workspace = true
 [dependencies]
 brk_core = { workspace = true }
 brk_exit = { workspace = true }
+brk_fetcher = { workspace = true }
 brk_indexer = { workspace = true }
+brk_logger = { workspace = true }
 brk_parser = { workspace = true }
 brk_vec = { workspace = true }
 color-eyre = { workspace = true }
+log = { workspace = true }
