--- a/crates/brk_vec/Cargo.toml
+++ b/crates/brk_vec/Cargo.toml
@@ -8,13 +8,10 @@ edition.workspace = true
 license.workspace = true
 repository.workspace = true
 
-[features]
-json = ["serde", "serde_json"]
-
 [dependencies]
 brk_exit = { workspace = true }
 memmap2 = "0.9.5"
 rayon = { workspace = true }
-serde = { workspace = true, optional = true }
-serde_json = { workspace = true, optional = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
 zerocopy = { workspace = true }
