--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,11 @@ brk_fetcher = { version = "0", path = "crates/brk_fetcher" }
 brk_indexer = { version = "0", path = "crates/brk_indexer" }
 brk_logger = { version = "0", path = "crates/brk_logger" }
 brk_parser = { version = "0", path = "crates/brk_parser" }
+brk_query = { version = "0", path = "crates/brk_query" }
 brk_server = { version = "0", path = "crates/brk_server" }
-brk_vec = { version = "0", path = "crates/brk_vec", features = ["json"] }
+brk_vec = { version = "0", path = "crates/brk_vec" }
 byteview = "0.5.4"
+clap = { version = "4.5.31", features = ["derive"] }
 color-eyre = "0.6.3"
 derive_deref = "1.1.1"
 fjall = "2.6.7"
@@ -29,4 +31,4 @@ minreq = { version = "2.13.2", features = ["https", "serde_json"] }
 rayon = "1.10.0"
 serde = { version = "1.0.218", features = ["derive"] }
 serde_json = { version = "1.0.139", features = ["float_roundtrip"] }
-zerocopy = { version = "0.8.20", features = ["derive"] }
+zerocopy = { version = "0.8.21", features = ["derive"] }
