--- a/crates/brk_server/Cargo.toml
+++ b/crates/brk_server/Cargo.toml
@@ -9,8 +9,10 @@ repository.workspace = true
 [dependencies]
 axum = "0.8.1"
 brk_computer = { workspace = true }
+brk_exit = { workspace = true }
 brk_indexer = { workspace = true }
 brk_logger = { workspace = true }
+brk_parser = { workspace = true }
 brk_vec = { workspace = true }
 color-eyre = { workspace = true }
 derive_deref = { workspace = true }
