--- a/crates/brk_cli/Cargo.toml
+++ b/crates/brk_cli/Cargo.toml
@@ -16,3 +16,9 @@ brk_parser = { workspace = true }
 brk_query = { workspace = true }
 brk_server = { workspace = true }
 clap = { workspace = true }
+color-eyre = { workspace = true }
+log = { workspace = true }
+
+[[bin]]
+name = "brk"
+path = "src/main.rs"
