--- a/crates/brk_query/Cargo.toml
+++ b/crates/brk_query/Cargo.toml
@@ -9,4 +9,9 @@ repository.workspace = true
 [dependencies]
 brk_computer = { workspace = true }
 brk_indexer = { workspace = true }
+brk_vec = { workspace = true }
 clap = { workspace = true }
+color-eyre = { workspace = true }
+derive_deref = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
