--- a/crates/brk_cli/Cargo.toml
+++ b/crates/brk_cli/Cargo.toml
@@ -7,7 +7,6 @@ license.workspace = true
 repository.workspace = true
 
 [dependencies]
-brk_core = { workspace = true }
 brk_computer = { workspace = true }
 brk_exit = { workspace = true }
 brk_indexer = { workspace = true }
@@ -15,7 +14,7 @@ brk_logger = { workspace = true }
 brk_parser = { workspace = true }
 brk_query = { workspace = true }
 brk_server = { workspace = true }
-clap = { workspace = true }
+clap = { workspace = true , features = ["string"] }
 color-eyre = { workspace = true }
 log = { workspace = true }
 
