--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,4 +31,5 @@ minreq = { version = "2.13.2", features = ["https", "serde_json"] }
 rayon = "1.10.0"
 serde = { version = "1.0.218", features = ["derive"] }
 serde_json = { version = "1.0.139", features = ["float_roundtrip"] }
+tabled = "0.18.0"
 zerocopy = { version = "0.8.21", features = ["derive"] }
