server: multiple frontends + auto download from github when needed

--- a/crates/brk_cli/Cargo.toml
+++ b/crates/brk_cli/Cargo.toml
@@ -8,6 +8,7 @@ repository.workspace = true
 
 [dependencies]
 brk_computer = { workspace = true }
+brk_core = { workspace = true }
 brk_exit = { workspace = true }
 brk_indexer = { workspace = true }
 brk_logger = { workspace = true }
