--- a/crates/brk_server/Cargo.toml
+++ b/crates/brk_server/Cargo.toml
@@ -10,15 +10,20 @@ repository.workspace = true
 axum = "0.8.1"
 brk_computer = { workspace = true }
 brk_exit = { workspace = true }
+brk_core = { workspace = true }
 brk_indexer = { workspace = true }
 brk_logger = { workspace = true }
 brk_parser = { workspace = true }
 brk_query = { workspace = true }
 brk_vec = { workspace = true }
+clap = { workspace = true }
 color-eyre = { workspace = true }
 jiff = { workspace = true }
 log = { workspace = true }
+minreq = { workspace = true }
 oxc = { version = "0.54.0", features = ["codegen", "minifier"] }
+serde = { workspace = true }
 serde_json = { workspace = true }
 tokio = { version = "1.43.0", features = ["full"] }
 tower-http = { version = "0.6.2", features = ["compression-full"] }
+zip = "2.2.3"
