--- a/crates/brk_vec/Cargo.toml
+++ b/crates/brk_vec/Cargo.toml
@@ -9,6 +9,7 @@ license.workspace = true
 repository.workspace = true
 
 [dependencies]
+brk_core = { workspace = true }
 brk_exit = { workspace = true }
 memmap2 = "0.9.5"
 rayon = { workspace = true }
