--- a/crates/brk_vec/Cargo.toml
+++ b/crates/brk_vec/Cargo.toml
@@ -14,3 +14,4 @@ rayon = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 zerocopy = { workspace = true }
+zstd = "0.13.3"
