--- a/crates/brk_cli/Cargo.toml
+++ b/crates/brk_cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "brk_cli"
-description = "A command line interface to interact with the Bitcoin Research Kit"
+description = "A command line interface to interact with the full Bitcoin Research Kit"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
