--- a/crates/brk_exit/Cargo.toml
+++ b/crates/brk_exit/Cargo.toml
@@ -7,5 +7,6 @@ license.workspace = true
 repository.workspace = true
 
 [dependencies]
-ctrlc = "3.4.5"
+brk_logger = { workspace = true }
+ctrlc = { version = "3.4.5", features = ["termination"] }
 log = { workspace = true }
