--- a/crates/brk_logger/Cargo.toml
+++ b/crates/brk_logger/Cargo.toml
@@ -10,3 +10,4 @@ repository.workspace = true
 color-eyre = { workspace = true }
 env_logger = "0.11.7"
 jiff = { workspace = true }
+log = { workspace = true }
