--- a/crates/brk_server/Cargo.toml
+++ b/crates/brk_server/Cargo.toml
@@ -24,5 +24,7 @@ minreq = { workspace = true }
 oxc = { version = "0.62.0", features = ["codegen", "minifier"] }
 serde = { workspace = true }
 tokio = { version = "1.44.1", features = ["full"] }
-tower-http = { version = "0.6.2", features = ["compression-full"] }
+tower-http = { version = "0.6.2", features = ["compression-full", "trace"] }
 zip = "2.5.0"
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
