--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,11 @@ lto = "fat"
 codegen-units = 1
 panic = "abort"
 
+# The profile that 'dist' will build with
+[profile.dist]
+inherits = "release"
+lto = "fat"
+
 [workspace.dependencies]
 bitcoin = { version = "0.32.5", features = ["serde"] }
 bitcoincore-rpc = "0.19.0"
