--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ panic = "abort"
 inherits = "release"
 
 [workspace.dependencies]
+axum = "0.8.3"
 bitcoin = { version = "0.32.5", features = ["serde"] }
 bitcoincore-rpc = "0.19.0"
 brk_cli = { version = "0", path = "crates/brk_cli" }
