--- a/crates/brk_server/Cargo.toml
+++ b/crates/brk_server/Cargo.toml
@@ -7,7 +7,7 @@ license.workspace = true
 repository.workspace = true
 
 [dependencies]
-axum = "0.8.3"
+axum = { workspace = true }
 brk_computer = { workspace = true }
 brk_exit = { workspace = true }
 brk_fetcher = { workspace = true }
