--- a/crates/brk_vec/Cargo.toml
+++ b/crates/brk_vec/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "brk_vec"
-description = "A very small, fast, efficient and simple storable Vec"
+description = "A push-only, truncable, compressable, saveable Vec"
 keywords = ["vec", "disk", "data"]
 categories = ["database"]
 version.workspace = true
