--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,14 +50,19 @@ tag-name = "v{{version}}"
 pre-release-commit-message = "release: v{{version}}"
 tag-message = "release: v{{version}}"
 
+# Config for 'dist'
 [workspace.metadata.dist]
+# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
 cargo-dist-version = "0.28.0"
+# CI backends to support
 ci = "github"
+# The installers to generate for each app
 installers = []
+# Target platforms to build apps for (Rust target-triple syntax)
 targets = [
     "aarch64-apple-darwin",
     "aarch64-unknown-linux-gnu",
     "x86_64-apple-darwin",
     "x86_64-unknown-linux-gnu",
 ]
-runner = "ubuntu-22.04"
+github-custom-runners.global = "ubuntu-latest"
