--- a/crates/brk_computer/Cargo.toml
+++ b/crates/brk_computer/Cargo.toml
@@ -15,4 +15,5 @@ brk_logger = { workspace = true }
 brk_parser = { workspace = true }
 brk_vec = { workspace = true }
 color-eyre = { workspace = true }
+fjall = { workspace = true }
 log = { workspace = true }
