computer: lazy part 3

--- a/crates/brk_vec/Cargo.toml
+++ b/crates/brk_vec/Cargo.toml
@@ -16,4 +16,5 @@ rayon = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 zerocopy = { workspace = true }
+zerocopy-derive = { workspace = true }
 zstd = "0.13.3"
