--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ panic = "abort"
 inherits = "release"
 
 [workspace.dependencies]
-axum = "0.8.3"
+axum = "0.8.4"
 bitcoin = { version = "0.32.5", features = ["serde"] }
 bitcoincore-rpc = "0.19.0"
 brk_cli = { version = "0", path = "crates/brk_cli" }
@@ -31,18 +31,21 @@ brk_query = { version = "0", path = "crates/brk_query" }
 brk_server = { version = "0", path = "crates/brk_server" }
 brk_vec = { version = "0", path = "crates/brk_vec" }
 byteview = "0.6.1"
-clap = { version = "4.5.37", features = ["derive", "string"] }
-color-eyre = "0.6.3"
+clap = { version = "4.5.37", features = ["string"] }
+clap_derive = "4.5.32"
+color-eyre = "0.6.4"
 derive_deref = "1.1.1"
 fjall = "2.10.0"
-jiff = "0.2.10"
+jiff = "0.2.11"
 log = { version = "0.4.27" }
 minreq = { version = "2.13.4", features = ["https", "serde_json"] }
 rayon = "1.10.0"
-serde = { version = "1.0.219", features = ["derive"] }
+serde = { version = "1.0.219" }
+serde_derive = "1.0.219"
 serde_json = { version = "1.0.140", features = ["float_roundtrip"] }
 tabled = "0.19.0"
-zerocopy = { version = "0.8.25", features = ["derive"] }
+zerocopy = { version = "0.8.25" }
+zerocopy-derive = "0.8.25"
 
 [workspace.metadata.release]
 shared-version = true
