--- a/crates/brk_query/Cargo.toml
+++ b/crates/brk_query/Cargo.toml
@@ -11,6 +11,7 @@ brk_computer = { workspace = true }
 brk_indexer = { workspace = true }
 brk_vec = { workspace = true }
 clap = { workspace = true }
+clap_derive = { workspace = true }
 color-eyre = { workspace = true }
 derive_deref = { workspace = true }
 serde = { workspace = true }
