--- a/crates/brk_server/Cargo.toml
+++ b/crates/brk_server/Cargo.toml
@@ -17,6 +17,7 @@ brk_logger = { workspace = true }
 brk_parser = { workspace = true }
 brk_query = { workspace = true }
 clap = { workspace = true }
+clap_derive = { workspace = true }
 color-eyre = { workspace = true }
 jiff = { workspace = true }
 log = { workspace = true }
