computer: lazy part 4

--- a/crates/brk_computer/Cargo.toml
+++ b/crates/brk_computer/Cargo.toml
@@ -20,3 +20,4 @@ color-eyre = { workspace = true }
 fjall = { workspace = true }
 log = { workspace = true }
 serde = { workspace = true }
+serde_json = { workspace = true }
