--- a/crates/brk_server/Cargo.toml
+++ b/crates/brk_server/Cargo.toml
@@ -10,12 +10,13 @@ repository.workspace = true
 axum = { workspace = true }
 brk_computer = { workspace = true }
 brk_exit = { workspace = true }
-brk_fetcher = { workspace = true }
 brk_core = { workspace = true }
+brk_fetcher = { workspace = true }
 brk_indexer = { workspace = true }
 brk_logger = { workspace = true }
 brk_parser = { workspace = true }
 brk_query = { workspace = true }
+brk_vec = { workspace = true }
 clap = { workspace = true }
 clap_derive = { workspace = true }
 color-eyre = { workspace = true }
