--- a/crates/brk_vec/Cargo.toml
+++ b/crates/brk_vec/Cargo.toml
@@ -10,6 +10,11 @@ repository.workspace = true
 
 [dependencies]
 arc-swap = "1.7.1"
+brk_core = { workspace = true }
+brk_exit = { workspace = true }
+clap = { workspace = true }
+clap_derive = { workspace = true }
+log = { workspace = true }
 memmap2 = "0.9.5"
 rayon = { workspace = true }
 serde = { workspace = true }
