--- a/crates/brk_core/Cargo.toml
+++ b/crates/brk_core/Cargo.toml
@@ -16,8 +16,9 @@ log = { workspace = true }
 rapidhash = "1.4.0"
 rlimit = "0.10.2"
 serde = { workspace = true }
-serde_derive = { workspace = true }
 serde_bytes = "0.11.17"
+serde_derive = { workspace = true }
+serde_json = { workspace = true }
 zerocopy = { workspace = true }
 zerocopy-derive = { workspace = true }
 
