--- a/crates/brk/Cargo.toml
+++ b/crates/brk/Cargo.toml
@@ -18,6 +18,7 @@ full = [
     "parser",
     "query",
     "server",
+    "store",
     "vec",
 ]
 core = ["brk_core"]
@@ -29,6 +30,7 @@ logger = ["brk_logger"]
 parser = ["brk_parser"]
 query = ["brk_query"]
 server = ["brk_server"]
+store = ["brk_store"]
 vec = ["brk_vec"]
 
 [dependencies]
@@ -42,6 +44,7 @@ brk_logger = { workspace = true, optional = true }
 brk_parser = { workspace = true, optional = true }
 brk_query = { workspace = true, optional = true }
 brk_server = { workspace = true, optional = true }
+brk_store = { workspace = true, optional = true }
 brk_vec = { workspace = true, optional = true }
 
 [package.metadata.docs.rs]
