--- a/crates/brk_computer/Cargo.toml
+++ b/crates/brk_computer/Cargo.toml
@@ -7,6 +7,8 @@ license.workspace = true
 repository.workspace = true
 
 [dependencies]
+bitcoin = { workspace = true }
+bitcoincore-rpc = { workspace = true }
 brk_core = { workspace = true }
 brk_exit = { workspace = true }
 brk_fetcher = { workspace = true }
@@ -19,6 +21,7 @@ clap_derive = { workspace = true }
 color-eyre = { workspace = true }
 derive_deref = { workspace = true }
 fjall = { workspace = true }
+jiff = { workspace = true }
 log = { workspace = true }
 rayon = { workspace = true }
 serde = { workspace = true }
