--- a/crates/brk_indexer/Cargo.toml
+++ b/crates/brk_indexer/Cargo.toml
@@ -11,8 +11,9 @@ bitcoin = { workspace = true }
 bitcoincore-rpc = { workspace = true }
 brk_core = { workspace = true }
 brk_exit = { workspace = true }
-brk_parser = { workspace = true }
 brk_logger = { workspace = true }
+brk_parser = { workspace = true }
+brk_store = { workspace = true }
 brk_vec = { workspace = true }
 byteview = { workspace = true }
 color-eyre = { workspace = true }
